[package]
name = "try-let"
version = "0.2.0"
authors = ["Nika Layzell <nika@thelayzells.com>"]
edition = "2018"

description = "Proc macro for a basic try-let form"
repository = "https://github.com/mystor/rust-try-let"
readme = "README.md"
license = "MPL-2.0"
keywords = ["try-let"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["full", "visit"] }
quote = "1.0"
